# FHRR_networks

./: .gitignore  README.md  ae_losses.npz  ca_fmnist_loss.npz  cardiotox CA model.ipynb  cardiotox SA model.ipynb  fashion test CA.ipynb  fashion test SA.ipynb  fashion test autoencoder-12.ipynb  fashion test residual-12.ipynb  modules.py  pyproject.toml  residual activation demo.ipynb  sa_fmnist_loss.npz  spike dev.ipynb  spiking.py  training.py  utils.py
.ipynb_checkpoints/: fashion test CA-checkpoint.ipynb  fashion test SA-checkpoint.ipynb
FHRR/: modules.py  position_encoding.py  spiking.py  training.py  utils.py
